--- a/SOURCE/app/src/main/res/layout/activity_login.xml
+++ b/SOURCE/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewController.LoginActivity">
+    tools:context=".LoginActivity">
     <ImageView
         android:scaleType="fitXY"
         android:src="@mipmap/img_bg"
