--- a/SOURCE/app/src/main/res/layout/fragment_fragment_with_tab.xml
+++ b/SOURCE/app/src/main/res/layout/fragment_fragment_with_tab.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ViewController.Base.FragmentWithTab">
 
     <LinearLayout
@@ -11,13 +13,26 @@
         android:layout_height="match_parent">
         <android.support.design.widget.TabLayout
             android:id="@+id/tab"
+            app:tabMode="fixed"
+            app:tabIconTint="@color/colorWhite"
             android:layout_width="match_parent"
-            android:layout_height="90dp"></android.support.design.widget.TabLayout>
+            android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+            android:layout_height="match_parent">
+        </android.support.v4.view.ViewPager>
     </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:tint="@android:color/white"/>
+
 
 </RelativeLayout>
