--- a/SOURCE/app/src/main/res/layout/activity_main.xml
+++ b/SOURCE/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,20 @@
         android:theme="@style/AppTheme">
 
         <android.support.v7.widget.Toolbar
-            android:backgroundTint="@color/colorWhite"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme" />
+            android:background="@color/colorWhite"
+            app:popupTheme="@style/AppTheme" >
+            <TextView
+                android:textColor="@color/colorBlack"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:id="@+id/txt_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
     <FrameLayout
