--- a/SOURCE/app/src/main/res/layout/fragment_fragment_with_tab.xml
+++ b/SOURCE/app/src/main/res/layout/fragment_fragment_with_tab.xml
@@ -32,6 +32,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         app:srcCompat="@android:drawable/ic_input_add"
+        android:layout_marginBottom="30dp"
         android:tint="@android:color/white"/>
 
 
