--- a/SOURCE/app/src/main/res/layout/activity_main.xml
+++ b/SOURCE/app/src/main/res/layout/activity_main.xml
@@ -19,14 +19,27 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorWhite"
             app:popupTheme="@style/AppTheme" >
-            <TextView
-                android:textColor="@color/colorBlack"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:gravity="center"
-                android:id="@+id/txt_title"
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:paddingRight="10dp"
+                    android:layout_weight="1"
+                    android:textColor="@color/colorBlack"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:gravity="center"
+                    android:id="@+id/txt_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <ImageView
+                    android:visibility="invisible"
+                    android:id="@+id/img_logout"
+                    android:src="@drawable/ic_power"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+            </LinearLayout>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
