--- a/SOURCE/app/src/main/res/layout/header_view_lv.xml
+++ b/SOURCE/app/src/main/res/layout/header_view_lv.xml
@@ -39,33 +39,33 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:paddingTop="8dp"
                 android:layout_weight="1"
                 android:textSize="15sp"
                 android:textColor="@color/colorBlack"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="Đại lý" />
+
             <RelativeLayout
+                android:id="@+id/rl_agentcy"
+                android:background="@drawable/bg_header"
                 android:layout_weight="5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <Spinner
-                    android:id="@+id/sp_agency"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:background="@drawable/bg_header"
-                    android:gravity="center"
-                    android:textColor="@color/colorPrimary" />
+               <TextView
+                   android:id="@+id/txt_agency"
+                   android:padding="8dp"
+                   android:textColor="@color/colorPrimary"
+                   android:gravity="center"
+                   android:text="Tất cả"
+                   android:textSize="16sp"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content" />
                 <ImageView
-                    android:paddingTop="8dp"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/ic_arrow_down"
+                    android:src="@drawable/ic_arrow_right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-
-
             </RelativeLayout>
 
         </TableRow>
@@ -82,25 +82,25 @@
                 android:layout_width="wrap_content"
                 android:text="Lô hàng" />
             <RelativeLayout
+                android:id="@+id/rl_batch"
+                android:background="@drawable/bg_header"
                 android:layout_weight="5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <Spinner
-                    android:id="@+id/sp_batch"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:background="@drawable/bg_header"
+                <TextView
+                    android:id="@+id/txt_batch"
+                    android:padding="8dp"
+                    android:textColor="@color/colorPrimary"
                     android:gravity="center"
-                    android:textColor="@color/colorPrimary" />
+                    android:text="Tất cả"
+                    android:textSize="16sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
                 <ImageView
-                    android:paddingTop="8dp"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/ic_arrow_down"
+                    android:src="@drawable/ic_arrow_right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-
-
             </RelativeLayout>
 
         </TableRow>
