--- a/SOURCE/app/src/main/res/menu/menu_contract.xml
+++ b/SOURCE/app/src/main/res/menu/menu_contract.xml
@@ -9,6 +9,7 @@
         app:showAsAction="ifRoom|collapseActionView" />
     <group android:checkableBehavior="single">
         <item
+            android:checked="true"
             android:id="@+id/mnu_all"
             android:title="Tất cả" />
         <item
