--- a/SOURCE/app/src/main/res/layout/activity_select.xml
+++ b/SOURCE/app/src/main/res/layout/activity_select.xml
@@ -7,9 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ViewController.Base.SelectActivity">
-    <ListView
-        android:id="@+id/lv_select"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/sw_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ListView
+            android:id="@+id/lv_select"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
