--- a/SOURCE/app/src/main/res/layout/hearder_view_order.xml
+++ b/SOURCE/app/src/main/res/layout/hearder_view_order.xml
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:id="@+id/txt_batch"
+                    android:id="@+id/txt_contract"
                     android:padding="8dp"
                     android:textColor="@color/colorPrimary"
                     android:gravity="center"
@@ -90,6 +90,7 @@
                 android:layout_width="wrap_content"
                 android:text="Từ ngày" />
             <TextView
+
                 android:textSize="16sp"
                 android:id="@+id/txt_choose_day"
                 android:padding="8dp"
