--- a/SOURCE/app/src/main/res/layout/item_batch.xml
+++ b/SOURCE/app/src/main/res/layout/item_batch.xml
@@ -20,6 +20,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:layout_marginRight="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Mã Lô: "
@@ -43,6 +44,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:layout_marginRight="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Số lượng: "
@@ -65,6 +67,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:layout_marginRight="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Còn lại: "
@@ -87,6 +90,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:layout_marginRight="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nguồn gốc: "
@@ -109,6 +113,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:layout_marginRight="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Người bán: "
@@ -131,6 +136,8 @@
             android:orientation="horizontal">
 
             <TextView
+
+                android:layout_marginRight="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Người mua: "
