--- a/SOURCE/app/src/main/res/layout/activity_add_batch.xml
+++ b/SOURCE/app/src/main/res/layout/activity_add_batch.xml
@@ -14,7 +14,9 @@
         android:layout_height="match_parent">
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_height="wrap_content">
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_height="wrap_content">
+
             <EditText
                 android:paddingLeft="12dp"
                 android:id="@+id/edt_batch_id"
